--- a/config/db.yml
+++ b/config/db.yml
@@ -13,7 +13,7 @@ default: &default
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password: 123456
+  password:
 
 development:
   <<: *default
